# django-from-scratch

./: README.md  pyproject.toml
core/: settings.py  urls.py
polls/: views.py
