[project]
name = "django-from-scratch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MELJOESTEIN", email = "thierrymemel@gmail.com" }
]
dependencies = [
    "django>=5.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
# Replace default runserver command
server = "python manage.py runserver"

# Simplify migrate command
migrate = "python manage.py migrate"

# Custom command for creating a superuser
superuser = "python manage.py createsuperuser"

# Command for starting a new app
startapp = "python manage.py startapp"

# Command to create a new Django project
project = "django-admin startproject core ."


# Other useful Django commands
makemigrations = "python manage.py makemigrations"
